force-app/main/default/objects/DD_Rate_Entry__c/DD_Rate_Entry__c.object-meta.xml
<CustomObject>
    <description>Per-product per-tier premium rate entry within a rate table</description>
    <label>Rate Entry</label>
    <nameField><displayFormat>RE-{000000}</displayFormat><label>Entry ID</label><type>AutoNumber</type></nameField>
    <pluralLabel>Rate Entries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>