force-app/main/default/objects/DD_Rate_Entry__c/fields/Monthly_Rate__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Rate__c</fullName>
    <label>Monthly Rate</label>
    <type>Currency</type>
    <precision>18</precision><scale>2</scale><required>true</required>
    <description>Base per-member-per-month rate</description>
</CustomField>