force-app/main/default/objects/DD_Rate_Entry__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Product</label>
    <type>Lookup</type>
    <referenceTo>DD_Product__c</referenceTo><relationshipLabel>Rate Entries</relationshipLabel><relationshipName>Rate_Entries_Prod</relationshipName><required>false</required>
    <description>Which product this rate applies to</description>
</CustomField>