force-app/main/default/objects/DD_Rate_Entry__c/fields/Rate_Table__c.field-meta.xml
<CustomField>
    <fullName>Rate_Table__c</fullName>
    <label>Rate Table</label>
    <type>MasterDetail</type>
    <referenceTo>DD_Rate_Table__c</referenceTo><relationshipLabel>Rate Entries</relationshipLabel><relationshipName>Rate_Entries</relationshipName><relationshipOrder>0</relationshipOrder><reparentableMasterDetail>false</reparentableMasterDetail><writeRequiresMasterRead>false</writeRequiresMasterRead>
    <description>Parent rate table</description>
</CustomField>