force-app/main/default/objects/DD_Rate_Entry__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <label>Region</label>
    <type>Text</type>
    <length>10</length><required>false</required><unique>false</unique><externalId>false</externalId>
    <description>Rating region code</description>
</CustomField>